# PaySkillCreator

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: fullstack-sync.mdc  project-context.mdc
docs/changes/: 2026-04-01-business-overview-diagram-phase1.md  2026-04-01-business-overview-diagram-phase2-web-custom.md  2026-04-01-engineering-wrapup-context-config.md  2026-04-01-router-json-compat-fix.md  2026-04-01-structured-output-constraint.md  2026-04-01-structured-output-json-hardening.md
evals/: conftest.py  test_base_skill_structured_output.py  test_chain_diagram.py  test_config.py  test_context_retriever.py  test_diagram_renderer.py  test_diagram_schema.py  test_graph.py  test_json_prompt_helper.py  test_router.py  test_router_structured_output.py  test_skill_generator.py  test_skills_context_usage.py  test_tools.py  test_web_server.py
src/: config.py  main.py  state.py
src/graph/: builder.py  diagram_renderer.py  nodes.py
src/llm/: __init__.py  json_prompt.py
src/prompts/: chain_analysis.py  plan_suggestion.py  repo_background.py  router.py  skill_generator.py
src/schemas/: input.py  output.py
src/skills/: __init__.py  base.py  chain_analysis.py  plan_suggestion.py  repo_background.py  skill_generator.py
src/tools/: __init__.py  code_search.py  file_reader.py  tree_parser.py  vector_search.py
web/: server.py
web/static/: app.js  index.html  style.css
